--- a/src/package.json
+++ b/src/package.json
@@ -12,8 +12,7 @@
     "axios": "^1.4.0",
     "pinia": "^2.1.3",
     "vant": "^4.4.0",
-    "vue": "^3.2.47",
-    "vuex": "^4.1.0"
+    "vue": "^3.2.47"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
